--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build docs
         uses: actions-rs/cargo@v1
         with:
-          command: doc
+          command: doc --all-features
 
       - name: Deploy docs
         uses: peaceiris/actions-gh-pages@v3
