add event logging, test nick name finding better

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2018"
 classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys.git" }
 detour = { git = "https://github.com/SpiralP/detour-rs.git" }
 futures = { version = "0.3.4", optional = true }
+log = "0.4.8"
 paste = "0.1.10"
