--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: -- --nocapture
+          args: --features ci -- --nocapture
 
   linux:
     runs-on: ubuntu-latest
@@ -74,7 +74,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: -- --nocapture
+          args: --features ci -- --nocapture
 
   mac:
     runs-on: macOS-latest
@@ -102,4 +102,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: -- --nocapture
+          args: --features ci -- --nocapture
