--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ detour = { git = "https://github.com/SpiralP/detour-rs.git" }
 futures = { version = "0.3.4", optional = true }
 log = "0.4.8"
 paste = "0.1.10"
+
+[features]
+ci = []
