--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 [dependencies]
 classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys.git" }
 futures = { version = "0.3", optional = true }
-log = "0.4"
-paste = "1.0"
+paste = "1"
+tracing = "0.1"
 
 [features]
 ci = []
