--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,13 @@ authors = ["SpiralP <spiral.palmer@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+async-dispatcher = { git = "https://github.com/SpiralP/rust-async-dispatcher.git" }
 classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys.git", branch = "cpe-plugin-messages" }
-futures = { version = "0.3", optional = true }
+futures = "0.3"
+futures-timer = "3"
+lazy_static = "1"
 paste = "1"
+tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 
 [features]
