--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,8 @@ paste = "1"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 
+[dev-dependencies]
+tracing-subscriber = "0.2"
+
 [features]
 ci = []
