--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "classicube-helpers"
-version = "1.2.5"
+version = "1.3.1"
 authors = ["SpiralP <spiral.palmer@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 async-dispatcher = { git = "https://github.com/SpiralP/rust-async-dispatcher.git" }
-classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys.git", branch = "cpe-plugin-messages" }
+classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys.git" }
 futures = "0.3"
 futures-timer = "3"
 lazy_static = "1"
