--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "classicube-helpers"
 version = "1.3.1"
 authors = ["SpiralP <spiral.palmer@gmail.com>"]
 edition = "2021"
+publish = false
 
 [dependencies]
 async-dispatcher = { git = "https://github.com/SpiralP/rust-async-dispatcher.git" }
