--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,9 @@ permissions:
   contents: read # for checkout
 
 jobs:
+  linux_nix:
+    uses: SpiralP/github-reusable-workflows/.github/workflows/build.yml@f9dc1f800ad9c50771bbbee75e5d2d44ebfb64af # main
+
   windows:
     runs-on: windows-latest
     permissions:
